--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
+import zipfile
+from pathlib import Path
+from PIL import Image
 
+# Diretório base
+base_dir = Path("/mnt/data/catatonia-site")
+base_dir.mkdir(parents=True, exist_ok=True)
+
+# Caminhos das imagens (usando nomes esperados no HTML)
+gif_path = base_dir / "baixados (2).gif"
+logo_path = base_dir / "logo-c.png"
+
+# Criando GIF de fundo (placeholder preto e branco, pois não temos imagem real no momento)
+gif_image = Image.new("RGB", (300, 200), "black")
+gif_image.save(gif_path, format="GIF")
+
+# Criando logo "C" como PNG (placeholder com letra C)
+logo_image = Image.new("RGB", (100, 100), "white")
+Image.Image.paste(logo_image, Image.new("RGB", (60, 60), "black"), (20, 20))
+logo_image.save(logo_path, format="PNG")
+
+# Arquivo HTML (exemplo do site criado anteriormente)
+html_content = """
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -17,7 +39,6 @@
       font-family: 'Courier New', monospace;
       color: #f0f0f0;
     }
-
     header {
       display: flex;
       flex-direction: column;
@@ -26,7 +47,6 @@
       background: rgba(0, 0, 0, 0.7);
       position: relative;
     }
-
     .logo-3d {
       width: 90px;
       height: 90px;
@@ -42,16 +62,10 @@
       -webkit-transform-style: preserve-3d;
       transform-style: preserve-3d;
     }
-
     @keyframes spin {
-      0% {
-        transform: rotateY(0deg);
-      }
-      100% {
-        transform: rotateY(360deg);
-      }
+      0% { transform: rotateY(0deg); }
+      100% { transform: rotateY(360deg); }
     }
-
     h1 {
       font-size: 2.5rem;
       margin: 0;
@@ -60,33 +74,28 @@
       color: crimson;
       text-shadow: 0 0 5px black;
     }
-
     section {
       padding: 2rem;
       max-width: 800px;
       margin: 0 auto;
       background-color: rgba(0, 0, 0, 0.8);
     }
-
     .trash-border {
       border: 1px dashed crimson;
       padding: 1rem;
       background: rgba(255, 255, 255, 0.02);
       margin-bottom: 2rem;
     }
-
     h2 {
       font-size: 1.2rem;
       text-transform: uppercase;
       color: #fff;
     }
-
     p {
       line-height: 1.6;
       font-size: 0.95rem;
       color: #ccc;
     }
-
     footer {
       text-align: center;
       font-size: 0.8rem;
@@ -94,12 +103,10 @@
       color: #999;
       background: rgba(0, 0, 0, 0.5);
     }
-
     .share-link {
       text-align: center;
       margin-top: 2rem;
     }
-
     .share-link a {
       color: crimson;
       text-decoration: underline;
@@ -153,3 +160,16 @@
   </footer>
 </body>
 </html>
+"""
+
+# Salvar o arquivo HTML
+html_path = base_dir / "index.html"
+html_path.write_text(html_content, encoding="utf-8")
+
+# Gerar o arquivo ZIP com tudo
+zip_path = Path("/mnt/data/catatonia-site-completo.zip")
+with zipfile.ZipFile(zip_path, 'w') as zipf:
+    for file_path in base_dir.glob("*"):
+        zipf.write(file_path, file_path.name)
+
+zip_path.name
