--- a/index.html
+++ b/index.html
@@ -13,6 +13,146 @@
       margin: 0;
       padding: 0;
       background: black;
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Catatonia - Selo Underground</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      background-image: url('baixados (2).gif');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      font-family: 'Courier New', monospace;
+      color: #f0f0f0;
+    }
+    header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 5rem 1rem 2rem;
+      background: rgba(0, 0, 0, 0.7);
+      position: relative;
+    }
+    .logo-3d {
+      width: 90px;
+      height: 90px;
+      background-image: url('logo-c.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-bottom: 1rem;
+      animation: spin 6s linear infinite;
+      transform: rotateY(0deg);
+      backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+    }
+    @keyframes spin {
+      0% { transform: rotateY(0deg); }
+      100% { transform: rotateY(360deg); }
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin: 0;
+      text-transform: uppercase;
+      letter-spacing: 0.15em;
+      color: crimson;
+      text-shadow: 0 0 5px black;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+    .trash-border {
+      border: 1px dashed crimson;
+      padding: 1rem;
+      background: rgba(255, 255, 255, 0.02);
+      margin-bottom: 2rem;
+    }
+    h2 {
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      color: #fff;
+    }
+    p {
+      line-height: 1.6;
+      font-size: 0.95rem;
+      color: #ccc;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.8rem;
+      padding: 2rem 1rem;
+      color: #999;
+      background: rgba(0, 0, 0, 0.5);
+    }
+    .share-link {
+      text-align: center;
+      margin-top: 2rem;
+    }
+    .share-link a {
+      color: crimson;
+      text-decoration: underline;
+      font-size: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="logo-3d"></div>
+    <h1>Catatonia</h1>
+  </header>
+
+  <section>
+    <div class="trash-border">
+      <h2>manifesto</h2>
+      <p>
+        Este selo nasce da raiva, da poesia suja e do skate na beira do abismo. Contra a alienação, contra o cinza. Aqui o som é sujo, a imagem é ruído e a palavra é faca. Somos o grito que não cabe no fone de ouvido.
+      </p>
+    </div>
+
+    <div class="trash-border">
+      <h2>artistas e bandas</h2>
+      <p>
+        Espaço para divulgar a cena local. Quer aparecer aqui? Manda teu som, teu clipe ou tua colagem. O selo é feito por quem tá na rua.
+      </p>
+    </div>
+
+    <div class="trash-border">
+      <h2>textos e zines</h2>
+      <p>
+        Crítica social, fragmentos da mente, ruídos escritos. Tudo que não passa na TV tá aqui. Baixe, imprima, cole no poste.
+      </p>
+    </div>
+
+    <div class="trash-border">
+      <h2>contato</h2>
+      <p>
+        Quer divulgar algo? Trocar ideia? <a href="mailto:catatoniacontato@gmail.com">catatoniacontato@gmail.com</a>
+      </p>
+    </div>
+
+    <div class="share-link">
+      <p>Compartilhe este site:</p>
+      <a href="#">https://catatonia-site.vercel.app</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>Catatonia - selo underground feito no caos, 2025</p>
+  </footer>
+</body>
+</html>
+
       background-image: url('baixados (2).gif');
       background-size: cover;
       background-position: center;
