--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
     <div class="share-link">
       <p>Compartilhe este site:</p>
-      <a href="#">https://catatonia-site.vercel.app</a>
+      <a href="#">catatonia-site.vercel.app</a>
     </div>
   </section>
 
